--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #cf6290; }
+  background: #feac19; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a845fb; }
+  background: #8e707c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2c97ea; }
+  background: #9ea885; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a0ec1f; }
+  background: #39f387; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1a6f01; }
+  background: #5a4e26; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #653868; }
+  background: #4c939d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2955de; }
+  background: #2c846f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #0f0538; }
+  background: #6c0b3e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #9dbbf3; }
+  background: #c4843c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #9bc79b; }
+  background: #8a4b86; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #640986; }
+  background: #601ac3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7472af; }
+  background: #f040ef; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #3c1566; }
+  background: #439998; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ca5449; }
+  background: #8faa79; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ab037e; }
+  background: #562d15; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ae9d3b; }
+  background: #8edf23; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cb35c6; }
+  background: #96471d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0be260; }
+  background: #817e4b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #280567; }
+  background: #6843e3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4c2574; }
+  background: #323354; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d7d878; }
+  background: #df71d6; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f3214b; }
+  background: #4144c9; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e35f30; }
+  background: #62d203; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #848edb; }
+  background: #a0bc1d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b842b8; }
+  background: #09ae4a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c939df; }
+  background: #852d0b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e51f09; }
+  background: #b82535; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #79a618; }
+  background: #b74af0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e22712; }
+  background: #df88ea; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1544d8; }
+  background: #41bdfa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #83db85; }
+  background: #13117d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #769d16; }
+  background: #de326a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #1911ca; }
+  background: #2fe487; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #92fd36; }
+  background: #ca5fcb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #78ce86; }
+  background: #060c60; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ccf32b; }
+  background: #725535; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5fc359; }
+  background: #70b520; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #aa554a; }
+  background: #256149; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c7d0ea; }
+  background: #091261; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f91abb; }
+  background: #5f0659; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a41a10; }
+  background: #dd8788; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5b8df4; }
+  background: #caa83e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #99af11; }
+  background: #65ee5e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4b735e; }
+  background: #da9988; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ca13cc; }
+  background: #32248f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #13305f; }
+  background: #1be6ec; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f319b7; }
+  background: #e73757; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #311d6d; }
+  background: #029817; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f56a39; }
+  background: #1e196e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #5479da; }
+  background: #c18dc9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2186c2; }
+  background: #be8987; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d1635b; }
+  background: #9dc93a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #c99bdd; }
+  background: #d51fc5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #49d137; }
+  background: #afbc44; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #fc194c; }
+  background: #8662ec; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #529d11; }
+  background: #cdb84b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2277b9; }
+  background: #ff11aa; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a4079c; }
+  background: #40823f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #dfda43; }
+  background: #1e8da8; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c7d4ad; }
+  background: #9e73ca; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #89e1a1; }
+  background: #ac5691; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #6d6bed; }
+  background: #a616f6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #254130; }
+  background: #cee6ac; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #060b8c; }
+  background: #e02429; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f231d4; }
+  background: #e15db5; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #70f117; }
+  background: #463859; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4dbf26; }
+  background: #db61bd; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #146d43; }
+  background: #68b0e7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4d1f07; }
+  background: #44c510; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #fd344b; }
+  background: #f21780; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #650cf1; }
+  background: #05610d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #a1d0cd; }
+  background: #7b576a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #86bc8b; }
+  background: #4d905b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ed3c83; }
+  background: #63577e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #944976; }
+  background: #66c254; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #15fd29; }
+  background: #3bad9e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #637658; }
+  background: #f61605; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #995d9b; }
+  background: #405163; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4daf30; }
+  background: #14d05c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ce28b7; }
+  background: #93a69f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #68fa36; }
+  background: #5f8ec4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #23d9e9; }
+  background: #756e6a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7240c8; }
+  background: #beda92; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5fd222; }
+  background: #28bce5; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b137eb; }
+  background: #3b94ca; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #92649d; }
+  background: #770669; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #bb8e67; }
+  background: #61e588; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #632e8c; }
+  background: #65401d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fa1ed7; }
+  background: #670a83; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e147a9; }
+  background: #5becb8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #04ff66; }
+  background: #245ede; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #05c29b; }
+  background: #de7098; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #5a9e79; }
+  background: #02c3d0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #faa14f; }
+  background: #1f4b15; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #27ce69; }
+  background: #491dbe; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #233747; }
+  background: #a58d8d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a39bba; }
+  background: #db8150; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #2fedb1; }
+  background: #9ec649; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c7ac5f; }
+  background: #6951b8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #30663e; }
+  background: #e6477f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9926,7 +9926,7 @@ table .bold-heading {
 .theme-button-small {
   padding: 12px 22px;
   font-size: 16px;
-  background: #a57dff;
+  background: #776FFF;
   border: 0px;
   color: white; }
   .theme-button-small:hover {
@@ -10970,6 +10970,10 @@ input:read-only {
 
 .standard-table .stripe tr:nth-of-type(odd) {
   background: #fafafa; }
+
+.table-hover tbody tr:hover, .standard-table .stripe tr:hover {
+  color: #212529;
+  background-color: rgba(0, 0, 0, 0.075) !important; }
 
 .standard-table table {
   white-space: nowrap;
