--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #feac19; }
+  background: #b8cabd; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8e707c; }
+  background: #4245ac; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9ea885; }
+  background: #6fba4d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #39f387; }
+  background: #c2c32f; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5a4e26; }
+  background: #d8efe3; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #4c939d; }
+  background: #95734e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2c846f; }
+  background: #d97e5d; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6c0b3e; }
+  background: #c5d72f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c4843c; }
+  background: #b14c5c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8a4b86; }
+  background: #c0dc01; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #601ac3; }
+  background: #254cee; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f040ef; }
+  background: #aaa5bf; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #439998; }
+  background: #ae8208; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8faa79; }
+  background: #d43827; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #562d15; }
+  background: #255e93; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8edf23; }
+  background: #61fdbc; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #96471d; }
+  background: #174cc6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #817e4b; }
+  background: #dc9e95; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6843e3; }
+  background: #559cd9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #323354; }
+  background: #d4638c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #df71d6; }
+  background: #522253; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4144c9; }
+  background: #380bf1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #62d203; }
+  background: #105085; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a0bc1d; }
+  background: #7707b1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #09ae4a; }
+  background: #e5a1db; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #852d0b; }
+  background: #c51639; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b82535; }
+  background: #049b5d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b74af0; }
+  background: #b77add; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #df88ea; }
+  background: #1a1a8c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #41bdfa; }
+  background: #8fb017; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #13117d; }
+  background: #a8baae; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #de326a; }
+  background: #368983; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2fe487; }
+  background: #cc80b5; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ca5fcb; }
+  background: #d92ef1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #060c60; }
+  background: #a6dcd7; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #725535; }
+  background: #9ebe15; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #70b520; }
+  background: #e8aa10; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #256149; }
+  background: #1056f3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #091261; }
+  background: #468e05; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5f0659; }
+  background: #26d713; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #dd8788; }
+  background: #c38a6c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #caa83e; }
+  background: #3b9c49; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #65ee5e; }
+  background: #f97a52; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #da9988; }
+  background: #83e1f4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #32248f; }
+  background: #138e7c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #1be6ec; }
+  background: #360f89; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e73757; }
+  background: #5382e5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #029817; }
+  background: #837de5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #1e196e; }
+  background: #124e14; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c18dc9; }
+  background: #c5b1a9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #be8987; }
+  background: #197e04; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #9dc93a; }
+  background: #e426cc; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d51fc5; }
+  background: #a8dac7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #afbc44; }
+  background: #efa2d7; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8662ec; }
+  background: #cc8374; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cdb84b; }
+  background: #bd8227; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ff11aa; }
+  background: #c6bdbd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #40823f; }
+  background: #b6f88d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #1e8da8; }
+  background: #0414de; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9e73ca; }
+  background: #17f3c9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ac5691; }
+  background: #2766e8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a616f6; }
+  background: #e84d90; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cee6ac; }
+  background: #3a4492; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e02429; }
+  background: #1010f5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e15db5; }
+  background: #0e64a0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #463859; }
+  background: #1038c3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #db61bd; }
+  background: #656bc7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #68b0e7; }
+  background: #b54924; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #44c510; }
+  background: #5570e3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f21780; }
+  background: #431db5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #05610d; }
+  background: #791bd6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7b576a; }
+  background: #6fc879; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #4d905b; }
+  background: #df398b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #63577e; }
+  background: #2b26d8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #66c254; }
+  background: #03ca80; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #3bad9e; }
+  background: #eb99bd; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f61605; }
+  background: #d6fdbc; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #405163; }
+  background: #2f1b0e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #14d05c; }
+  background: #639947; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #93a69f; }
+  background: #b7c6ad; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #5f8ec4; }
+  background: #d84893; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #756e6a; }
+  background: #aad70e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #beda92; }
+  background: #3e2e49; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #28bce5; }
+  background: #6e01fa; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3b94ca; }
+  background: #7e583b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #770669; }
+  background: #316c86; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #61e588; }
+  background: #5db8c5; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #65401d; }
+  background: #b6698a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #670a83; }
+  background: #02af08; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #5becb8; }
+  background: #f539aa; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #245ede; }
+  background: #342b7c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #de7098; }
+  background: #bbc66e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #02c3d0; }
+  background: #4283a4; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #1f4b15; }
+  background: #276911; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #491dbe; }
+  background: #2173d6; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #a58d8d; }
+  background: #4d451f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #db8150; }
+  background: #07e53c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9ec649; }
+  background: #ac5c77; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6951b8; }
+  background: #617bcd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e6477f; }
+  background: #a4cffa; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9974,7 +9974,7 @@ table .bold-heading {
     width: 100%;
     padding: 10px 10px;
     border: 1px solid #bababa;
-    padding-left: 40px;
+    padding-left: 40px !important;
     outline: 0px !important;
     height: 40px; }
   .search-wrap-standard .search-query-dropdown-btn {
@@ -14635,7 +14635,11 @@ td .check-container {
   .connectors-box-wrapper .connec-box-div {
     background: #fff;
     padding: 10px;
-    text-align: center; }
+    text-align: center;
+    border: 2px solid transparent;
+    cursor: pointer; }
+    .connectors-box-wrapper .connec-box-div:hover {
+      border: 2px solid #776FFF; }
     .connectors-box-wrapper .connec-box-div .box-logo a {
       display: inline-block;
       background: white;
@@ -16289,6 +16293,17 @@ option {
   display: grid;
   grid-template-columns: 1fr auto;
   grid-gap: 15px; }
+
+.assets-details-modal-title-row {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr auto;
+  grid-gap: 15px;
+  margin: 15px 0px; }
+
+.assets-details-modal-title {
+  font-size: 20px;
+  color: #4c4c4c; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
