--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3064,7 +3064,7 @@ table .bold-heading {
   width: 100%;
   padding: 10px 10px;
   border: 1px solid #bababa;
-  padding-left: 40px;
+  padding-left: 40px !important;
   // border-radius: 40px;
   outline: 0px !important;
   height: 40px;
