--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b8cabd; }
+  background: #59fddc; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4245ac; }
+  background: #b69797; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6fba4d; }
+  background: #08692e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c2c32f; }
+  background: #7ebfe5; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d8efe3; }
+  background: #6412f9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #95734e; }
+  background: #5c2ad2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d97e5d; }
+  background: #d94808; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c5d72f; }
+  background: #bd84d4; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b14c5c; }
+  background: #57eaaa; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c0dc01; }
+  background: #1c4691; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #254cee; }
+  background: #db5ffb; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #aaa5bf; }
+  background: #f4c605; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ae8208; }
+  background: #ce7a86; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d43827; }
+  background: #0df393; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #255e93; }
+  background: #a5f4a5; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #61fdbc; }
+  background: #72aa7c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #174cc6; }
+  background: #ffcc26; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #dc9e95; }
+  background: #cb32fc; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #559cd9; }
+  background: #ee4ec8; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d4638c; }
+  background: #3bdb31; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #522253; }
+  background: #781edd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #380bf1; }
+  background: #f7d242; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #105085; }
+  background: #f0e2e7; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7707b1; }
+  background: #99ba6a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e5a1db; }
+  background: #96a6ef; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c51639; }
+  background: #1a496e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #049b5d; }
+  background: #2f16a2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b77add; }
+  background: #1135ca; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #1a1a8c; }
+  background: #5da791; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #8fb017; }
+  background: #f955b7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a8baae; }
+  background: #84541d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #368983; }
+  background: #b44e49; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #cc80b5; }
+  background: #39dc1c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d92ef1; }
+  background: #d34592; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a6dcd7; }
+  background: #258484; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #9ebe15; }
+  background: #0dc7ca; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e8aa10; }
+  background: #ec5877; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #1056f3; }
+  background: #284d41; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #468e05; }
+  background: #5003da; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #26d713; }
+  background: #30f8a8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c38a6c; }
+  background: #33f85b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3b9c49; }
+  background: #342937; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f97a52; }
+  background: #c88230; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #83e1f4; }
+  background: #74861c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #138e7c; }
+  background: #561b9e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #360f89; }
+  background: #cf61de; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #5382e5; }
+  background: #4ef86c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #837de5; }
+  background: #e07d60; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #124e14; }
+  background: #158890; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c5b1a9; }
+  background: #dcd14a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #197e04; }
+  background: #1c5275; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #e426cc; }
+  background: #9b37b1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a8dac7; }
+  background: #d05f52; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #efa2d7; }
+  background: #7e96f3; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cc8374; }
+  background: #8b6388; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #bd8227; }
+  background: #6b2e74; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c6bdbd; }
+  background: #c64b8a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b6f88d; }
+  background: #f78b36; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0414de; }
+  background: #c24690; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #17f3c9; }
+  background: #2c6130; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2766e8; }
+  background: #ad979d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e84d90; }
+  background: #2751f4; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3a4492; }
+  background: #aa4e4d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1010f5; }
+  background: #f216f5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #0e64a0; }
+  background: #c589e9; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1038c3; }
+  background: #47c16b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #656bc7; }
+  background: #51332c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b54924; }
+  background: #bd370a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5570e3; }
+  background: #496820; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #431db5; }
+  background: #b6a30a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #791bd6; }
+  background: #fe2f6a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6fc879; }
+  background: #c23441; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #df398b; }
+  background: #0c74dd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2b26d8; }
+  background: #af6295; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #03ca80; }
+  background: #faee91; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #eb99bd; }
+  background: #b4fcef; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d6fdbc; }
+  background: #de4e09; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2f1b0e; }
+  background: #bdc0a4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #639947; }
+  background: #e9954f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b7c6ad; }
+  background: #f549cd; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d84893; }
+  background: #22bcd5; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #aad70e; }
+  background: #f16cc7; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3e2e49; }
+  background: #996794; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6e01fa; }
+  background: #3ce02c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7e583b; }
+  background: #461228; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #316c86; }
+  background: #f64661; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5db8c5; }
+  background: #5b5060; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b6698a; }
+  background: #c6cc0f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #02af08; }
+  background: #d97b5a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f539aa; }
+  background: #93d9a6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #342b7c; }
+  background: #6b4098; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bbc66e; }
+  background: #2d4979; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4283a4; }
+  background: #2881a7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #276911; }
+  background: #4cea55; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2173d6; }
+  background: #4fae8d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4d451f; }
+  background: #84c4b2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #07e53c; }
+  background: #6f802b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ac5c77; }
+  background: #b89fdc; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #617bcd; }
+  background: #6e306c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a4cffa; }
+  background: #e2b2cf; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16299,7 +16299,8 @@ option {
   align-items: center;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
-  margin: 15px 0px; }
+  margin: 15px 0px;
+  padding: 14px 0px; }
 
 .assets-details-modal-title {
   font-size: 20px;
