--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4269,6 +4269,7 @@ grid-gap: 15px;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
   margin: 15px 0px;
+  padding:14px 0px;
 }
 .assets-details-modal-title {
   font-size: 20px;
